--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Helpdesk by FaBritze</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Helpdesk : Programa de helpdesk criado em aula de programação web na Universidade do Oeste de Santa Catarina (Campus Chapecó)" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Helpdesk</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Helpdesk</h1>
-        <p>Programa de helpdesk criado em aula de programação web na Universidade do Oeste de Santa Catarina (Campus Chapecó)</p>
 
-        <p class="view"><a href="https://github.com/FaBritze/HelpDesk">View the Project on GitHub <small>FaBritze/HelpDesk</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/FaBritze/HelpDesk">View on GitHub</a>
 
+          <h1 id="project_title">Helpdesk</h1>
+          <h2 id="project_tagline">Programa de helpdesk criado em aula de programação web na Universidade do Oeste de Santa Catarina (Campus Chapecó)</h2>
 
-        <ul>
-          <li><a href="https://github.com/FaBritze/HelpDesk/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/FaBritze/HelpDesk/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/FaBritze/HelpDesk">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/FaBritze/HelpDesk/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/FaBritze/HelpDesk/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
 <a name="programa%C3%A7%C3%A3o-web" class="anchor" href="#programa%C3%A7%C3%A3o-web"><span class="octicon octicon-link"></span></a>Programação Web</h3>
 
@@ -36,14 +39,19 @@
 <h3>
 <a name="extras" class="anchor" href="#extras"><span class="octicon octicon-link"></span></a>Extras</h3>
 
-<p>Tomei a liberdade de incrementar aos estudos meus conhecimentos com desenvolvimento web, adicionando a biblioteca de javascript jQuery e alguns conceitos de segurança.</p>
+<p>Tomei a liberdade de incrementar aos estudos meus conhecimentos com desenvolvimento web, adicionando a biblioteca de javascript jQuery.</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/FaBritze">FaBritze</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Helpdesk maintained by <a href="https://github.com/FaBritze">FaBritze</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
